# SessionArchaeologist

./: .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  alembic.ini  docker-compose.yml  nginx.conf  pyproject.toml  session-archaeologist-spec.md
alembic/: env.py
alembic/versions/: 0717ad25160a_initial_schema.py  0c2dab85c64a_add_subagent_and_artifact_columns.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  types.ts
frontend/src/components/: ExportModal.tsx
frontend/src/pages/: Dashboard.tsx  NarrativeView.tsx  SessionView.tsx
src/archaeologist/: __init__.py  cli.py  config.py
src/archaeologist/agent/: engine.py  tools.py
src/archaeologist/api/: app.py  deps.py
src/archaeologist/api/routes/: chunks.py  export.py  narratives.py  pipeline.py  search.py  sessions.py  turns.py
src/archaeologist/chunker/: engine.py
src/archaeologist/db/: models.py  session.py
src/archaeologist/export/: docx.py  slides.py  templates.py
src/archaeologist/extractor/: agent.py  prompts.py
src/archaeologist/llm/: client.py
src/archaeologist/parser/: jsonl.py
src/archaeologist/rag/: store.py
src/archaeologist/refiner/: agent.py  feedback.py  prompts.py
src/archaeologist/synthesizer/: agent.py  prompts.py
src/archaeologist/tasks/: celery.py
